2006-09-25  Brian Warner  <warner@lothar.com>

	* setup.py: the new buildbot.steps module wasn't being installed.
	Thanks to Jose Dapena Paz for the catch, fixes SF#1560631.
	(testmsgs): add the extra stuff from buildbot/test/* so you can
	run unit tests on an installed copy of buildbot, not just from
	the source tree.

	* contrib/svn_buildbot.py (ChangeSender.getChanges): the first *4*
	columns of 'svnlook changed' output contain status information, so
	strip [:4] instead of [:6]. Depending upon what the status flags
	were, this would sometimes lead to mangled filenames. Thanks to
	Riccardo Magliocchetti for the patch. Closes SF#1545146.

	* buildbot/steps/source.py (Monotone): initial Monotone support,
	contributed by Nathaniel Smith. Still needs docs and tests, but
	this code has been in use on the Monotone buildbot for a long
	time now.
	* buildbot/slave/commands.py (Monotone): slave-side support
	* buildbot/changes/monotone.py (MonotoneSource): polling change
	source

	* buildbot/changes/bonsaipoller.py (BonsaiPoller): Ben also
	contributed a Change Source that polls a Bonsai server (a
	kind of web-based viewcvs CGI script).

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): Ben
	Hearsum contributed a status plugin which sends email in the same
	format that Tinderbox does: this allows a number of tinderbox
	tools to be driven by Buildbot instead. Thanks Ben!

2006-09-24  Brian Warner  <warner@lothar.com>

	* buildbot/changes/mail.py (parseBonsaiMail): fix the parser.
	Thanks to Robert Helmer for the patch.

	* buildbot/process/base.py (Build.setupSlaveBuilder): tell our
	BuildStatus about the buildslave name at the *beginning* of the
	build, rather than at the end. Thanks to Alexander Lorenz for the
	patch.
	* buildbot/status/html.py (StatusResourceBuild.body): always
	include the slavename in the build page, not just when the build
	has finished.
	* buildbot/status/mail.py (MailNotifier.buildMessage): include the
	slavename in the email message
